--- a/redes.html
+++ b/redes.html
@@ -104,6 +104,7 @@
     section ul {
       margin-left: 1.5rem;
       padding-left: 1.5rem;
+      margin-bottom: 1.5rem;
       list-style: disc;
     }
     section p {
